--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.109.2",
+    "@react-three/fiber": "^8.16.8",
+    "@tabler/icons-react": "^3.11.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.19",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.4.0"
+    "react-icons": "^5.2.1",
+    "tailwind-merge": "^2.4.0",
+    "three": "^0.167.0",
+    "three-globe": "^2.31.1"
   },
   "devDependencies": {
     "@types/node": "^20",
